--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
         "module": "CommonJS",
         "declaration": true,
         "isolatedModules": true,
-        "noEmit": true,
+        "noEmit": false,
         "outDir": "dist"
     },
-    "include": ["src"],
-    "exclude": ["node_modules"]
+    "include": ["dist"],
+    "exclude": ["node_modules", "src"]
 }
