--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@millosaurs/prettylogs",
-    "version": "0.0.6",
+    "version": "1.0.0",
+    "description": "A beautiful, feature-rich, and highly configurable logging library for Node.js applications",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
@@ -12,8 +13,22 @@
         "build": "tsup "
     },
     "keywords": [
-        "Logger",
-        "Pretty Print"
+        "logger",
+        "logging",
+        "log",
+        "console",
+        "debug",
+        "colorful",
+        "chalk",
+        "typescript",
+        "nodejs",
+        "pretty-print",
+        "formatter",
+        "winston",
+        "pino",
+        "bunyan",
+        "terminal",
+        "cli"
     ],
     "files": [
         "dist"
